--- a/java/basic/并发.markdown
+++ b/java/basic/并发.markdown
@@ -60,7 +60,7 @@ uniqueInstance 采用 volatile 关键字修饰也是很有必要的， uniqueIns
 
 通过 JDK 自带的 javap 命令查看 SynchronizedDemo 类的相关字节码信息：首先切换到类的对应目录执行 `javac SynchronizedDemo.java` 命令生成编译后的 .class 文件，然后执行`javap -c -s -v -l SynchronizedDemo.class`。
 
-![1](/Users/wuwt/Desktop/1.png)
+![1](./img/thread/1.png)
 
 从上面我们可以看出:
 
@@ -78,7 +78,7 @@ uniqueInstance 采用 volatile 关键字修饰也是很有必要的， uniqueIns
 >
 >}
 
-![2](/Users/wuwt/Desktop/2.png)
+![2](./img/thread/2.png)
 
 synchronized 修饰的方法并没有 monitorenter 指令和 monitorexit 指令，取得代之的确实是 ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法，JVM 通过该 ACC_SYNCHRONIZED 访问标志来辨别一个方法是否声明为同步方法，从而执行相应的同步调用。
 
